# variant

./: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/compile-time/: CMakeLists.txt
benchmark/compile-time/ctor.default/: CMakeLists.txt  eggs.cpp.erb  mpark.cpp.erb
benchmark/dependencies/: eggs.cmake  mpark.cmake
